[package]
name = "tuvero"
version = "0.1.0"
edition = "2021"

description = "Tournament management library, with a variety of tournament systems"
license = "MIT"
repository = "https://github.com/elor/tuvero.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
